store-app/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      component: products-api-backend
  template:
    metadata:
      labels:
        component: products-api-backend
    spec:
      containers:
        - name: products-api-app
          image: asemikitm/store-backend:1.0.0
          ports:
            - containerPort: 8080
