store-app/k8s/notification-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: notification-api
  template:
    metadata:
      labels:
        component: notification-api
    spec:
      containers:
        - name: store-notification-api
          image: asemikitm/store-notification-api:1.0.0
          ports:
            - containerPort: 5001
