store-app/k8s/notification-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    component: notification-api
