store-app/k8s/rabbitmq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  ports:
    - name: db
      protocol: TCP
      port: 5672
      targetPort: 5672
  selector:
    component: rabbitmq
